--- a/app/Frontend/frontend/package.json
+++ b/app/Frontend/frontend/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
